--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -25,6 +25,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install
-    - run: npm run build
+    - run: npm run build --prod
+    - run: echo "Build Success"
       env:
         CI: true
